Worki in progress

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -13,8 +13,8 @@
 
 % adjust the following
 \title{Title of the report goes here\\ and it may have several lines}
-\author{Your name}
-\academicyear{2021/22}
+\author{Alvin Jonel De la Cruz Guerrero}
+\academicyear{2022/23}
 \supervisor{Dr. Your Supervisor}
 
 % the following are irrelevant for Msc:
