--- a/docs/report.tex
+++ b/docs/report.tex
@@ -61,6 +61,10 @@ achieved. Appendix \ref{app:rawdata} displays the raw data, and
 certain technical calculations for section \ref{sec:my1} are deferred
 to appendix \ref{app:calculations}.
 
+\include{chapters/chapter2_background}
+
+\include{chapters/chapter3_frontfixing}
+
 \section{A section} \label{sec:background}
 
 References can be for example
