--- a/docs/report.tex
+++ b/docs/report.tex
@@ -61,24 +61,12 @@ achieved. Appendix \ref{app:rawdata} displays the raw data, and
 certain technical calculations for section \ref{sec:my1} are deferred
 to appendix \ref{app:calculations}.
 
+\include{chapters/chapter1_introduction}
 \include{chapters/chapter2_background}
-
 \include{chapters/chapter3_frontfixing}
+\include{chapters/chapter4_lcp}
+\include{chapters/chapter5_conclusion}
 
-\section{A section} \label{sec:background}
-
-References can be for example
-textbooks \cite{bott-tu,haw-ell,wolf,alling-greenleaf,hatcher},
-conventional journal articles \cite{wheeler-geon,dewitt-can},
-conventional journal articles that are also available at an e-print
-server \cite{krasnov-louko,barrett-dawe}, electronic journal
-articles \cite{poisson-livrev}, articles in conference proceedings
-\cite{poisson-gr17}, PhD theses \cite{giulini-thesis,langlois-thesis}
-or websites \cite{ligo-site}. This template orders the references by
-their first citation, cites them by their number and keeps any
-footnotes\footnote{Such as this.} separate from the references. Other
-citation practices exist: Your supervisor can advise as to what is
-appropriate for your topic.
 
 \section{Another section} \label{sec:my1}
 
