--- a/docs/progress.bib
+++ b/docs/progress.bib
@@ -48,4 +48,23 @@
   year      = {2013}
 }
 
-‌
+‌@article{landau_1950_heat_ci,
+  title={Heat conduction in a melting solid},
+  author={H. G. Landau},
+  journal={Quarterly of Applied Mathematics},
+  year={1950},
+  volume={8},
+  pages={81-94},
+  url={https://api.semanticscholar.org/CorpusID:126349227}
+}
+
+@article{company_egorova_jodar_2014,
+author = {Company, Rafael and Egorova, Vera and Jódar, Lucas},
+year = {2014},
+month = {04},
+pages = {},
+title = {Solving American Option Pricing Models by the Front Fixing Method: Numerical Analysis and Computing},
+volume = {2014},
+journal = {Abstract and Applied Analysis},
+doi = {10.1155/2014/146745}
+}
