--- a/docs/report.tex
+++ b/docs/report.tex
@@ -53,106 +53,15 @@ concise and clear. The typical length is one paragraph.
 \include{chapters/chapter1_introduction}
 \include{chapters/chapter2/blackscholes}
 \include{chapters/chapter3_finite_diferences_schemes}
+\include{chapters/chapter4/numericalresults}
 \include{chapters/chapter5_lcp}
 \include{chapters/chapter5_conclusion}
 
-
-\section{Another section} \label{sec:my1}
-
-\subsection{A subsection} \label{subsec:theory}
-
-Subsections may be used. Use a clear structure in your report.
-
-We denote the set of real numbers by
-$\mathbb{R}$, the set of integers by $\ZZ$ and the set of complex
-numbers by $\mathbb{C}$. Our analysis is based on the equation
-$e^{\pi i} = -1$ and the relation
-\begin{equation}
-  \frac{2}{4} = \frac{1}{2}   \label{eq:myeq1}
-\end{equation} % no empty line after this
-which we verify in the appendix \ref{app:calculations}.
-Useful consequences are
-\begin{align}
-  \frac{4}{8} &= \frac{1}{2} \\
-  \frac{4}{12} + \frac{1}{\Gamma(s)}\int_0^{\infty} \frac{t^{s-1}}{e^t-1} dt
-     &= \frac{1}{3} +\sum_{n=1}^{\infty} \frac{1}{n^s}\\
-  \frac{2}{10} &= \frac{1}{5} 
-\end{align}
-For any $0\neq a\in \ZZ$, the equality
-\begin{equation*} % * for no numbering
- \frac{2 a}{4 a} = \frac{1}{2}
-\end{equation*}
-follows from equation \eqref{eq:myeq1}.
-
-\subsection{Another subsection} \label{subsec:application}
-
-\subsubsection{A subsubsection} \label{subsubsec:red}
-
-Sometimes subsubsections may be appropriate.
-
-\subsubsection{Another subsubsection} \label{subsubsec:green}
-
-
-
-This could contain a table of interesting numbers
-\begin{center}
-  \begin{tabular}{r|cccccc}
-    $n$   & 1 & 2 & 3 & 4 & 5 & 6 \\ \hline
-    $F_n$ & 1 & 1 & 2 & 3 & 5 & 8 \\
-    $B_n$ & $\tfrac{1}{2}$ & $\tfrac{1}{6}$ & 0 & $-\tfrac{1}{30}$ & 0 &  $\tfrac{1}{42}$ \\
-    $p_n$ & 2 & 3& 5& 7 & 11 & 13 \\
-  \end{tabular}
-\end{center}
-
-\section{Yet another section} \label{sec:my2}
-
-Graphics can be included. Figure \ref{fig:bsd} shows an example.
-Learn about floats and pictures in the \LaTeX\ wikibook to place
-the figures at the right place.
-%
-\begin{figure}
- \begin{center}
-   \includegraphics[width=0.7\textwidth]{bsd.jpg}
- \end{center}
- \caption{Oh look, something happens here !}
- \label{fig:bsd}
-\end{figure}
-
 \section{Conclusions} \label{sec:conclusions}
-
-Further help on \LaTeX\ can be found easily on the internet. The \LaTeX\
-wikibook\footnote{\tt http://en.wikibooks.org/wiki/LaTeX} contains a lot.
-For instance you would find there how to type theorems and proofs nicely.
-Or how to include source code written in some programming language like
-python. There are long lists available with all sorts of common
-mathematical symbols like $\xi$, $\nabla$, $\infty$, $\log$, $\iff$, etc.
 
 \newpage
 
 \appendix
-
-\section{Raw data} \label{app:rawdata}
-
-Material that needs to be included but would distract from the main
-line of presentation can be put in appendices.
-Examples of such material are raw
-data, computing codes and details of calculations.
-
-But note tha the maximal number of pages includes the appendix and the references.
-
-\section{Calculations for section \ref{sec:my1}} \label{app:calculations}
-
-In this appendix we could verify equation \eqref{eq:myeq1} or present the code that was used. 
-\begin{lstlisting}[language=Python]
-def gcd(a,b):
-    """
-    Return the greatest common divisor
-    of a and b 
-    """
-    while b > 0:
-        (a, b) = (b, a % b)
-    return a
-\end{lstlisting}
 
 \newpage
 
