--- a/docs/report.tex
+++ b/docs/report.tex
@@ -52,7 +52,7 @@ concise and clear. The typical length is one paragraph.
 
 \include{chapters/chapter1_introduction}
 \include{chapters/chapter2/blackscholes}
-\include{chapters/chapter3_finite_diferences_schemes}
+\include{chapters/chapter3/fini}
 \include{chapters/chapter4/numericalresults}
 \include{chapters/chapter5_lcp}
 \include{chapters/chapter5_conclusion}
