--- a/docs/report.tex
+++ b/docs/report.tex
@@ -31,6 +31,8 @@
 % put your own definitions and shorthands here
 \newcommand{\ZZ}{\mathbb{Z}}
 
+\parindent 0cm
+
 \begin{document}
 
 \maketitle
@@ -52,7 +54,7 @@ concise and clear. The typical length is one paragraph.
 
 \include{chapters/chapter1_introduction}
 \include{chapters/chapter2/blackscholes}
-\include{chapters/chapter3/fini}
+\include{chapters/chapter3/finitediferencesschemes}
 \include{chapters/chapter4/numericalresults}
 \include{chapters/chapter5_lcp}
 \include{chapters/chapter5_conclusion}
