Workin in progress

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -5,6 +5,8 @@
 \usepackage{listings} % to include code in python see https://en.wikibooks.org/wiki/LaTeX/Source_Code_Listings
 \usepackage{xcolor}
 \usepackage{biblatex}
+\usepackage{algorithm}
+\usepackage{algpseudocodex}
 \addbibresource{progress.bib}
 % other useful pagackes include booktabs, hyperref, amsthm, xcolor, todonotes, showkeys, ...
 % see https://www.overleaf.com/learn 
