--- a/docs/report.tex
+++ b/docs/report.tex
@@ -58,7 +58,7 @@ concise and clear. The typical length is one paragraph.
 \include{chapters/chapter2/blackscholes}
 \include{chapters/chapter3/finitediferencesschemes}
 \include{chapters/chapter4/numericalresults}
-\include{chapters/chapter5_lcp}
+\include{chapters/chapter5/lcp}
 \include{chapters/chapter5_conclusion}
 
 \section{Conclusions} \label{sec:conclusions}
