--- a/docs/progress.bib
+++ b/docs/progress.bib
@@ -48,23 +48,142 @@
   year      = {2013}
 }
 
-‌@article{landau_1950_heat_ci,
-  title={Heat conduction in a melting solid},
-  author={H. G. Landau},
-  journal={Quarterly of Applied Mathematics},
-  year={1950},
-  volume={8},
-  pages={81-94},
-  url={https://api.semanticscholar.org/CorpusID:126349227}
+@article{landau_1950_heat_ci,
+  title   = {Heat conduction in a melting solid},
+  author  = {H. G. Landau},
+  journal = {Quarterly of Applied Mathematics},
+  year    = {1950},
+  volume  = {8},
+  pages   = {81-94},
+  url     = {https://api.semanticscholar.org/CorpusID:126349227}
 }
 
 @article{company_egorova_jodar_2014,
-author = {Company, Rafael and Egorova, Vera and Jódar, Lucas},
-year = {2014},
-month = {04},
-pages = {},
-title = {Solving American Option Pricing Models by the Front Fixing Method: Numerical Analysis and Computing},
-volume = {2014},
-journal = {Abstract and Applied Analysis},
-doi = {10.1155/2014/146745}
+  author  = {Company, Rafael and Egorova, Vera and Jódar, Lucas},
+  year    = {2014},
+  month   = {04},
+  pages   = {},
+  title   = {Solving American Option Pricing Models by the Front Fixing Method: Numerical Analysis and Computing},
+  volume  = {2014},
+  journal = {Abstract and Applied Analysis},
+  doi     = {10.1155/2014/146745}
+}
+
+@article{merton_1973,
+  issn      = {00058556},
+  url       = {http://www.jstor.org/stable/3003143},
+  abstract  = {The long history of the theory of option pricing began in 1900 when the French mathematician Louis Bachelier deduced an option pricing formula based on the assumption that stock prices follow a Brownian motion with zero drift. Since that time, numerous researchers have contributed to the theory. The present paper begins by deducing a set of restrictions on option pricing formulas from the assumption that investors prefer more to less. These restrictions are necessary conditions for a formula to be consistent with a rational pricing theory. Attention is given to the problems created when dividends are paid on the underlying common stock and when the terms of the option contract can be changed explicitly by a change in exercise price or implicitly by a shift in the investment or capital structure policy of the firm. Since the deduced restrictions are not sufficient to uniquely determine an option pricing formula, additional assumptions are introduced to examine and extend the seminal Black-Scholes theory of option pricing. Explicit formulas for pricing both call and put options as well as for warrants and the new "down-and-out" option are derived. The effects of dividends and call provisions on the warrant price are examined. The possibilities for further extension of the theory to the pricing of corporate liabilities are discussed.},
+  author    = {Robert C. Merton},
+  journal   = {The Bell Journal of Economics and Management Science},
+  number    = {1},
+  pages     = {141--183},
+  publisher = {[Wiley, RAND Corporation]},
+  title     = {Theory of Rational Option Pricing},
+  urldate   = {2023-08-21},
+  volume    = {4},
+  year      = {1973}
+}
+
+@article{black_scholes_1973,
+  issn      = {00223808, 1537534X},
+  url       = {http://www.jstor.org/stable/1831029},
+  abstract  = {If options are correctly priced in the market, it should not be possible to make sure profits by creating portfolios of long and short positions in options and their underlying stocks. Using this principle, a theoretical valuation formula for options is derived. Since almost all corporate liabilities can be viewed as combinations of options, the formula and the analysis that led to it are also applicable to corporate liabilities such as common stock, corporate bonds, and warrants. In particular, the formula can be used to derive the discount that should be applied to a corporate bond because of the possibility of default.},
+  author    = {Fischer Black and Myron Scholes},
+  journal   = {Journal of Political Economy},
+  number    = {3},
+  pages     = {637--654},
+  publisher = {University of Chicago Press},
+  title     = {The Pricing of Options and Corporate Liabilities},
+  urldate   = {2023-08-21},
+  volume    = {81},
+  year      = {1973}
+}
+
+@article{cox_1979,
+  title    = {Option pricing: A simplified approach},
+  journal  = {Journal of Financial Economics},
+  volume   = {7},
+  number   = {3},
+  pages    = {229-263},
+  year     = {1979},
+  issn     = {0304-405X},
+  doi      = {https://doi.org/10.1016/0304-405X(79)90015-1},
+  url      = {https://www.sciencedirect.com/science/article/pii/0304405X79900151},
+  author   = {John C. Cox and Stephen A. Ross and Mark Rubinstein},
+  abstract = {This paper presents a simple discrete-time model for valuing options. The fundamental economic principles of option pricing by arbitrage methods are particularly clear in this setting. Its development requires only elementary mathematics, yet it contains as a special limiting case the celebrated Black-Scholes model, which has previously been derived only by much more difficult methods. The basic model readily lends itself to generalization in many ways. Moreover, by its very construction, it gives rise to a simple and efficient numerical procedure for valuing options for which premature exercise may be optimal.}
+}
+
+@article{brennan_1997,
+  issn      = {00221082, 15406261},
+  url       = {http://www.jstor.org/stable/2326779},
+  author    = {Michael J. Brennan and Eduardo S. Schwartz},
+  journal   = {The Journal of Finance},
+  number    = {2},
+  pages     = {449--462},
+  publisher = {[American Finance Association, Wiley]},
+  title     = {The Valuation of American Put Options},
+  urldate   = {2023-08-22},
+  volume    = {32},
+  year      = {1977}
+}
+
+
+
+@article{schwartz_197779,
+  title    = {The valuation of warrants: Implementing a new approach},
+  journal  = {Journal of Financial Economics},
+  volume   = {4},
+  number   = {1},
+  pages    = {79-93},
+  year     = {1977},
+  issn     = {0304-405X},
+  doi      = {https://doi.org/10.1016/0304-405X(77)90037-X},
+  url      = {https://www.sciencedirect.com/science/article/pii/0304405X7790037X},
+  author   = {Eduardo S. Schwartz},
+  abstract = {The option pricing model developed by Black and Scholes and extended by Merton gives rise to partial differential equations governing the value of an option. When the underlying stock pays no dividends – and in some very restrictive cases when it does – a closed form solution to the differential equation subject to the appropriate boundary conditions, has been obtained. But, in some relevant cases such as the one in which the stock pays discrete dividends, no closed form solution has been found. This paper shows how to solve these equations by numerical methods. In addition, the optimal strategy for exercising American options is derived. A numerical illustration of the procedure is also presented.}
+}
+
+
+@article{statista_2019,
+  title   = {Futures Industry Association. (January 16, 2020). Number of derivatives traded globally in 2019, by category (in billions) [Graph].},
+  journal = {Statista},
+  year    = {2019},
+  url     = {https://www.statista.com/statistics/380324/global-futures-and-options-volume-by-category},
+  author  = {Eduardo S. Schwartz}
+}
+
+@article{huang_2000,
+  author   = {Huang,Jacqueline},
+  year     = {2000},
+  title    = {American options and complementarity problems},
+  journal  = {ProQuest Dissertations and Theses},
+  pages    = {139},
+  note     = {Copyright - Database copyright ProQuest LLC; ProQuest does not claim copyright in the individual underlying works; Last updated - 2023-02-23},
+  abstract = {The main purpose of this dissertation is to investigate a variety of pricing problems associated with American options. Due to its early exercise feature, the pricing of an American option can be formulated, by way of Black-Scholes analysis, as a free boundary problem involving a second-order partial differential operator. This gives rise to a partial differential complementarity problem (PDCP). In Chapter 2, we present finite difference schemes for approximating the PDCP by a sequence of linear complementarity problems (LCPs). The fundamental properties of the LCP are discussed and solution algorithms and numerical examples are presented. The solution convergence of the discretized scheme to the continuous model is also discussed. We also consider variations on the Black-Scholes pricing model by relaxing some of the basic assumptions. In the presence of transaction costs, the discretized partial differential complementarity problem leads to nonlinear complementarity problems (NCPs). This is the focus of Chapter 3. An existence result is given for this class of NCPs. Numerical solutions to these problems are obtained using specialized LCP and NCP algorithms. In Chapter 4, we consider an inverse pricing problem of estimating the volatility surface implied by American options. The problem is formulated as a constrained optimization problem which is an instance of a mathematical program with equilibrium constraints (MPEC). Two methods for solving an MPEC are described and applied to the implied volatility problem. Computational results are reported. We make concluding remarks in Chapter 5 and discuss future research directions. In summary, the contribution of this research is the development of viable computational approaches for dealing with American options using a set of contemporary mathematical programming tools.},
+  keywords = {Social sciences; Applied sciences; Pure sciences; American options; Complementarity; Option pricing; Volatility; Mathematics; Finance; Studies; Securities prices; Options trading; Applied mathematics; Arbitrage; Optimization; Approximation; Numerical analysis; Explicit knowledge; Interest rates; Boundary conditions; Mathematical programming; Hedging; Partial differential equations; Financial instruments; Valuation; Copyright; Linear programming; Stochastic models; Methods; Algorithms; Put & call options; Operations research; 0364:Applied Mathematics; 0405:Mathematics; 0508:Finance; 0796:Operations research},
+  isbn     = {978-0-599-52740-9},
+  language = {English},
+  url      = {http://nottingham.idm.oclc.org/login?url=https://www.proquest.com/dissertations-theses/american-options-complementarity-problems/docview/304625569/se-2}
+}
+
+@article{wu1997front,
+  title   = {A front-fixing finite difference method for the valuation of American options},
+  author  = {Wu, Lixin and Kwok, Yue-Kuen},
+  journal = {Journal of Financial Engineering},
+  volume  = {6},
+  number  = {4},
+  pages   = {83--97},
+  year    = {1997}
+}
+
+@article{dewynne_howison_rupf_wilmott_1993,
+  title     = {Some mathematical results in the pricing of American options},
+  volume    = {4},
+  doi       = {10.1017/S0956792500001194},
+  number    = {4},
+  journal   = {European Journal of Applied Mathematics},
+  publisher = {Cambridge University Press},
+  author    = {Dewynne, J. N. and Howison, S. D. and Rupf, I. and Wilmott, P.},
+  year      = {1993},
+  pages     = {381-398}
 }
