--- a/docs/report.tex
+++ b/docs/report.tex
@@ -16,6 +16,32 @@
 \usepackage{hyperref}
 \usepackage{amssymb}
 
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\ttfamily\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=t,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
+}
+
+\lstset{style=mystyle}
+
 \addbibresource{progress.bib}
 % other useful pagackes include booktabs, hyperref, amsthm, xcolor, todonotes, showkeys, ...
 % see https://www.overleaf.com/learn 
@@ -80,6 +106,7 @@ concise and clear. The typical length is one paragraph.
 \numberwithin{figure}{section}
 \numberwithin{table}{section}
 \numberwithin{algorithm}{section}
+\numberwithin{lstlisting}{section}
 
 \include{chapters/chapter1_introduction}
 \include{chapters/chapter2/blackscholes}
