--- a/docs/report.tex
+++ b/docs/report.tex
@@ -15,6 +15,7 @@
 \usepackage{subcaption}
 \usepackage{hyperref}
 \usepackage{amssymb}
+\usepackage{pdfpages}
 
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
@@ -52,8 +53,7 @@
 \MSc
 
 % adjust the following
-\title{Numerical solutions to the free boundary problem and the linear complementary problem 
-arisen from American options.}
+\title{Numerical Methods for Pricing American Options with Continuous Dividend Yields Assets.}
 \author{Alvin Jonel De la Cruz Guerrero}
 \academicyear{2022/23}
 \supervisor{Dr. Anna Kalogirou}
@@ -92,11 +92,8 @@ arisen from American options.}
 \maketitle
 
 \begin{abstract}
-The abstract of the report goes here. The abstract should state the
-topic(s) under investigation and the main results or
-conclusions. Methods or approaches should be stated if this is
-appropriate for the topic. The abstract should be self-contained,
-concise and clear. The typical length is one paragraph.
+  In this work, we present numerical methods for pricing American options with continuous dividend yield asset. We focus on their implementation, convergence analysis, and performance. Our focus on two important formulation of the pricing problem: The free boundary and the linear complementary formulations. In the free boundary formulation, we consider the Black-Scholes PDE with one moving boundary condition. We consider two transformation-based approaches, proposed by Nielsen et al. and Company et al. to fix the moving boundary. Explicit and implicit schemes are developed for the Nielsen transformation, along with an explicit scheme for the Company transformation.
+  In the linear complementary formulation, we consider the Black-Scholes PDE as variational inequalities that transform to linear complementary problem once finite difference schemes are applied. The PSOR is presented as an approach for solving the complementary problem arisen. Finally, several numerical experiments are conducted to evaluate convergence of the proposed schemes and discuss their relative performance.
 \end{abstract}
 
 % Table of contents
@@ -120,6 +117,11 @@ concise and clear. The typical length is one paragraph.
 \appendix
 
 \include{chapters/appendix}
+\section{Code for numerical experiments} \label{sec:numericalexperiments}
+
+\section{Code fopr convergence analysis} \label{sec:convergenceanalysis}
+
+\includepdf[pages=-]{chapters/appendix/convergence_analysis}
 
 \newpage
 
