--- a/docs/report.tex
+++ b/docs/report.tex
@@ -119,12 +119,11 @@
 \include{chapters/appendix}
 \section{Code for numerical experiments} \label{sec:numericalexperiments}
 
-\section{Code fopr convergence analysis} \label{sec:convergenceanalysis}
-
-\includepdf[pages=-]{chapters/appendix/convergence_analysis}
-
+\section{Code for convergence analysis} \label{sec:convergenceanalysis}
+\vspace{2cm}
+\includegraphics[scale=0.9, clip, trim={2.5cm, 2.5cm 0mm 7cm}]{chapters/appendix/convergence_analysis}
+\includepdf[pages=2-, scale=0.8, pagecommand={\thispagestyle{plain}}, clip,trim=2.5cm 25mm 0mm 0mm]{chapters/appendix/convergence_analysis}
 \newpage
-
 \printbibliography
 
 \end{document}
