--- a/docs/progress.bib
+++ b/docs/progress.bib
@@ -186,3 +186,26 @@
   year      = {1993},
   pages     = {381-398}
 }
+
+@article{dantzig_1968,
+title = {Complementary pivot theory of mathematical programming},
+journal = {Linear Algebra and its Applications},
+volume = {1},
+number = {1},
+pages = {103-125},
+year = {1968},
+issn = {0024-3795},
+doi = {https://doi.org/10.1016/0024-3795(68)90052-9},
+url = {https://www.sciencedirect.com/science/article/pii/0024379568900529},
+author = {Richard W. Cottle and George B. Dantzig}
+}
+
+@book{epperson_2013,
+author = {Epperson, James F.},
+title = {An Introduction to Numerical Methods and Analysis},
+year = {2013},
+isbn = {1118367596},
+publisher = {Wiley Publishing},
+edition = {2nd},
+abstract = {Praise for the First Edition. . . outstandingly appealing with regard to its style, contents, considerations of requirements of practice, choice of examples, and exercises.Zentralblatt MATH. . . carefully structured with many detailed worked examples.The Mathematical GazetteThe Second Edition of the highly regarded An Introduction to Numerical Methods and Analysis provides a fully revised guide to numerical approximation. The book continues to be accessible and expertly guides readers through the many available techniques of numerical methods and analysis.An Introduction to Numerical Methods and Analysis, Second Edition reflects the latest trends in the field, includes new material and revised exercises, and offers a unique emphasis on applications. The author clearly explains how to both construct and evaluate approximations for accuracy and performance, which are key skills in a variety of fields. A wide range of higher-level methods and solutions, including new topics such as the roots of polynomials, spectral collocation, finite element ideas, and Clenshaw-Curtis quadrature, are presented from an introductory perspective, and the Second Edition also features:Chapters and sections that begin with basic, elementary material followed by gradual coverage of more advanced materialExercises ranging from simple hand computations to challenging derivations and minor proofs to programming exercisesWidespread exposure and utilization of MATLABAn appendix that contains proofs of various theorems and other materialThe book is an ideal textbook for students in advanced undergraduate mathematics and engineering courses who are interested in gaining an understanding of numerical methods and numerical analysis.}
+}
