--- a/docs/report.tex
+++ b/docs/report.tex
@@ -92,8 +92,8 @@
 \maketitle
 
 \begin{abstract}
-  In this work, we present numerical methods for pricing American options with continuous dividend yield asset. We focus on their implementation, convergence analysis, and performance. Our focus on two important formulation of the pricing problem: The free boundary and the linear complementary formulations. In the free boundary formulation, we consider the Black-Scholes PDE with one moving boundary condition. We consider two transformation-based approaches, proposed by Nielsen et al. and Company et al. to fix the moving boundary. Explicit and implicit schemes are developed for the Nielsen transformation, along with an explicit scheme for the Company transformation.
-  In the linear complementary formulation, we consider the Black-Scholes PDE as variational inequalities that transform to linear complementary problem once finite difference schemes are applied. The PSOR is presented as an approach for solving the complementary problem arisen. Finally, several numerical experiments are conducted to evaluate convergence of the proposed schemes and discuss their relative performance.
+
+  In this work, we present numerical methods for pricing American options with continuous dividend-yield assets. We focus on two important formulations of the pricing problem: the free boundary problem and the variational inequalities problem. In the free boundary formulation, we solve the Black-Scholes PDE with a moving boundary condition. The front-fixing method proposes using a change of variables that transforms the free boundary problem into a PDE where the moving boundary is fixed and is explicitly present. We consider the changes of variables proposed by Nielsen et al. and Company et al. Then we implement explicit and implicit finite difference schemes to solve the front-fixed PDE. On the other hand, for the variational complementary problem, we propose solving a system of variational inequalities derived from transforming the Black-Scholes PDE into the heat diffusion equation. By applying the theta method, the variational inequalities problem converts to a linear complementary problem in which a linear equation needs to be solved subject to complementary conditions. Then, we implement the PSOR method to solve the LCP problem iteratively. Finally, by conducting numerical experiments, we conclude that both explicit methods for Nielsen and Company transformations are efficient and accurate. Moreover, we discourage the use of the implicit method for the Nielsen transformation because it leads to a higher approximation error. Lastly, although the LCP problem yields accurate approximations, the method is relatively inefficient compared to the explicit methods for the Nielsen transformation.
 \end{abstract}
 
 % Table of contents
