--- a/docs/report.tex
+++ b/docs/report.tex
@@ -93,7 +93,8 @@
 
 \begin{abstract}
 
-  In this work, we present numerical methods for pricing American options with continuous dividend-yield assets. We focus on two important formulations of the pricing problem: the free boundary problem and the variational inequalities problem. In the free boundary formulation, we solve the Black-Scholes PDE with a moving boundary condition. The front-fixing method proposes using a change of variables that transforms the free boundary problem into a PDE where the moving boundary is fixed and is explicitly present. We consider the changes of variables proposed by Nielsen et al. and Company et al. Then we implement explicit and implicit finite difference schemes to solve the front-fixed PDE. On the other hand, for the variational complementary problem, we propose solving a system of variational inequalities derived from transforming the Black-Scholes PDE into the heat diffusion equation. By applying the theta method, the variational inequalities problem converts to a linear complementary problem in which a linear equation needs to be solved subject to complementary conditions. Then, we implement the PSOR method to solve the LCP problem iteratively. Finally, by conducting numerical experiments, we conclude that both explicit methods for Nielsen and Company transformations are efficient and accurate. Moreover, we discourage the use of the implicit method for the Nielsen transformation because it leads to a higher approximation error. Lastly, although the LCP problem yields accurate approximations, the method is relatively inefficient compared to the explicit methods for the Nielsen transformation.
+  In this work, we present numerical methods for pricing American options with continuous dividend-yield assets. We focus on two important formulations of the pricing problem: the free boundary problem and the variational inequalities problem. In the free boundary formulation, we solve the Black-Scholes PDE with a moving boundary condition. By applying the front fixing method, we transform the free boundary problem to a domain where moving boundary is fixed. Then, we derived explicit and implicit schemes for the transformed PDE. On the other hand, for the variational inequalities formulation, we solve the heat diffusion variational inequality derived from transforming the Black-Scholes PDE into the heat diffusion equation. By applying the theta method, the variational inequalities problem is reformulated as a linear complementary problem. Then, we derived PSOR method to solve the LCP problem iteratively. Finally, by conducting a series of numerical experiments, we conclude that the front fixing explicit schemes derived are efficient and accurate, the front fixing implicit scheme produces significant approximation errors, and the PSOR method yields to accurate approximations though is relatively inefficient compared to the front fixing explicit schemes.
+  
 \end{abstract}
 
 % Table of contents
